[package]
name = "toaster_pain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
mongodb = {version = "2.4.0", features = ["bson-chrono-0_4", "bson-serde_with", "bson-uuid-1"]}
serenity = "0.11.5"
tokio = "1.27.0"
wit-ai = "0.1.0"
rlua = { git = "https://github.com/amethyst/rlua", version = "0.19.4" }
lingua = "1.4.0"


[dependencies.uuid]
version = "1.3.1"
features = ["v8", "rand"]
